--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,6 @@
-version: "3.8"
-
 services:
   web:
     build: .
-    container_name: simple-http-server
+    container_name: apache-static
     ports:
-      - "8000:8000"
-    volumes:
-      - .:/app
-    command: python -m http.server 8000
+      - "8000:80"
